# IML_FS26

./: README.md  main.py  pyproject.toml
week1/: L01_Data_Cleaning.ipynb  L01_Data_Cleaning_SOLUTION.ipynb  week1_examples_regression_and_classification_with_students_data_sep.ipynb
week2/: L02_Linear_Regression.ipynb  week2_examples_linear_regression.ipynb
week3/: L03_Gradient_Descent.ipynb  Week3_PolyReg_and_Gradient_Descent.ipynb
week4/: L04_Logistic_Regression.ipynb  Week 4 - Logistic regression.ipynb  Week 4 - Model complexity bias-variance.ipynb
